--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "gulp-connect": "~2.0.5"
   },
   "dependencies": {
-    "react": ">=0.10.0"
+    "create-react-class": "^15.6.3",
+    "react": "^16.8.4",
+    "react-addons-pure-render-mixin": "^15.6.2",
+    "react-dom": "^16.8.4",
+    "react-dom-factories": "^1.0.2"
   }
 }
